<resources>
    <string name="app_name">Github Trending</string>
    <string name="trending_list">Trending List</string>
    <string name="search_list">Search List</string>
    <string name="toolbar_title">Trending Repositories</string>
    <string name="search">Search</string>
    <string name="trending_repository">Trending Repository</string>
    <string name="programming">Programming</string>
    <string name="description">Description</string>
    <string name="author_name">Author Name</string>
    <string name="project_name">Project Name</string>
    <string name="try_again">Try again</string>


        <string name="error_state_message">Unable to sync data, please try again</string>
    <string name="data_update_failed">@string/error_state_message</string>

    <string name="data_update_success">Sync successful</string>

    <string name="alert_no_network">Please check your data connection</string>
    <string name="no_network_connection">@string/alert_no_network</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_item_found">No result found</string>
</resources>