<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="noNetworkViewModel"
            type="com.vs.trendz.fragments.noNetworkFragment.NoNetworkConnectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.noNetworkFragment.NoNetworkConnection">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/toolbar_title"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/no_network_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_toolbar">

            <TextView
                android:id="@+id/textView"
                style="@style/no_network_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_network_connection"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_tryagain"
                style="@style/try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>