<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dataModel"
            type="com.vs.trendz.model.TrendingRepositoryResponseData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="@+id/tv_author_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_author_name"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/author_name"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/project_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_author_name" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/description"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_project_name" />

        <ImageView
            android:id="@+id/colorIndicator"
            android:layout_width="@dimen/dp_8"
            android:layout_height="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_16"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/tv_programming_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_programming_language">

        </ImageView>

        <TextView
            android:id="@+id/tv_programming_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/programming"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toEndOf="@+id/colorIndicator"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:indeterminate="false"
            android:isIndicator="true"
            android:numStars="1"
            android:progressTint="@color/star_color"
            android:rating="1"
            android:secondaryProgressTint="@color/star_color"
            app:layout_constraintBottom_toBottomOf="@+id/tv_programming_language"
            app:layout_constraintEnd_toStartOf="@+id/tv_star_count"
            app:layout_constraintTop_toTopOf="@+id/tv_programming_language" />

        <TextView
            android:id="@+id/tv_star_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>